--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.jamesnorris.mcshot</groupId>
 	<artifactId>MCShot</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.1</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
@@ -11,6 +11,18 @@
 			<version>1.6.4-R0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+					<overview>${basedir}/overview.html</overview>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 	<build>
 		<resources>
 			<resource>
